implemented personalized job filtering to hide applied positions in employee portal